tests/samples/negative/expressions/bitwise_not_float.ax
module bitwise_not_float;

fn main() -> i32 {
  let value: f64 = ((1) as f64);
  return ((~value) as i32);
}
